--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
+:root {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
 header > nav > div > ul {
     justify-content: center;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 header nav {
@@ -15,7 +18,6 @@ header nav {
     text-align: center;
     padding: 30px 0 30px 200px;
     color: rgb(48, 85, 207);
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 50px;
     text-transform: uppercase;
 }
@@ -80,3 +82,121 @@ header nav {
     font-weight: bold;
     padding-top: 20px;
 }
+
+.welcome {
+    color: rgb(78, 149, 216);
+    font-family: 'Brush Script MT';
+    margin-top: 100px;
+}
+
+.welcome h1 {
+    font-size: 80px;
+}
+
+.pattes {
+    margin-top: 100px;
+    margin-left: 150px;
+}
+
+article {
+    width: 700px;
+    text-align: center;
+}
+
+.art1 {
+    margin-top: 80px;
+}
+
+.button3 {
+    border-radius: 50px;
+    background-color:  rgb(48, 85, 207);
+    width: 200px;
+    padding: 10px;
+}
+
+.button3 a {
+    text-decoration: none;
+    color: white;
+}
+
+.text {
+    text-align: center;
+}
+
+.cat {
+    margin: 20px;
+    height: 700px;
+    padding: 10px;
+}
+
+.butdown {
+    position: absolute;
+    bottom: 20px;
+}
+
+.catitle {
+    color: rgb(78, 149, 216);
+    font-family: 'Brush Script MT';
+    text-align: center;
+    padding-top: 130px;
+    font-size: 100px;
+}
+
+h3 {
+    font-family: 'Brush Script MT';
+    font-size: 40px;
+    text-align: center;
+}
+
+div h3 p {
+    text-align: center;
+}
+
+.button4 {
+    border-radius: 50px;
+    background-color:  rgb(48, 85, 207);
+    padding: 10px;
+    text-decoration: none;
+    color: white;
+}
+
+.foot {
+    margin-top: 50px;
+    position: relative;
+    height: 600px;
+    background-color: rgb(48, 85, 207);
+}
+
+.contact {
+    width: 700px;
+    height: 350px;
+    position: absolute;
+    left: 200px;
+    top: 100px;
+    border: white 1px solid;
+    border-radius: 50px;
+}
+
+footer h2 {
+    text-align: center;
+    margin: 20px;
+    color: white;
+    font-family: 'Brush Script MT';
+    font-size: 50px;
+}
+
+.formulaire {
+    margin: 20px;
+}
+
+.button5 {
+    background-color: rgb(255, 123, 0);
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+    margin: 15px 30px 10px 500px;
+    padding: 15px;
+    border-radius: 50px;
+    text-decoration: none;
+    font-weight: bold;
+} 
