--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-/* page index.html */
-
 :root {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
@@ -9,19 +7,18 @@ h4  {
     color: orange;
 }
 
+/* page index.html */
+
+/* header */
+
 .nav ul li {
     margin-left: 100px;
-    
 }
 
 .margesvg   {
     margin-top: 40px;
     margin-right: 10px;
 }
-
-
-/* header */ 
-
 
 .nav-link:hover    {
     background-color: orange;
@@ -35,8 +32,9 @@ header nav {
 }
 
 
-/* main section 1 */
+/* main */
 
+/* first section */
 
 
 .title {
@@ -72,7 +70,6 @@ header nav {
     }
 }
 
-
 .contImg    {
     position: relative;
 }
@@ -81,7 +78,6 @@ header nav {
     position: absolute;
     top: 3vh;
     left: 6vw;
-    
 }
 
 .textImage h2 {
@@ -91,8 +87,7 @@ header nav {
     margin-bottom: 40px;
 }
 
-
- .button2   {
+.button2   {
     background-color: rgb(255, 123, 0);
     color: white;
     font-family: Arial, Helvetica, sans-serif;
@@ -113,23 +108,6 @@ header nav {
     }
 }
 
-  
-
-
-
-.button5    {
-    background-color: rgb(255, 123, 0);
-    color: white;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 16px;
-    margin: 40px;
-    padding: 15px;
-    border-radius: 50px;
-    text-decoration: none;
-    font-weight: bold;
-    text-decoration: none;
-}
-
 .description {
     text-align: center;
     background-color: rgb(48, 85, 207);
@@ -137,7 +115,6 @@ header nav {
     font-weight: bold;
     font-size: 20px;
     padding: 10px;
-    
 }
 
 .declaration {
@@ -156,14 +133,14 @@ header nav {
     }
 }
 
-/* main section 2 */
+/* second section */
+
 
 .welcome    {
     grid-column-start: 1;
     grid-column-end: 13;
     grid-row-start: 1;
     margin: 50px 20px 10px 20px;
-    
 }
 
 .pattes h3 {
@@ -172,13 +149,12 @@ header nav {
     font-family: 'Brush Script MT';
 }
 
-
-article {
-    width: 700px;
-}
-
 .art1 {
     margin-top: 80px;
+}
+
+.text {
+    text-align: center;
 }
 
 .button3 {
@@ -195,11 +171,17 @@ article {
     color: white;
 }
 
-.text {
-    text-align: center;
-}
 
-/* main section 3 */
+/* third section */
+
+
+.catitle {
+    color: rgb(78, 149, 216);
+    font-family: 'Brush Script MT';
+    text-align: center;
+    padding-top: 130px;
+    font-size: 100px;
+}
 
 .cat {
     margin: 20px;
@@ -210,14 +192,6 @@ article {
 .butdown {
     position: absolute;
     bottom: 20px;
-}
-
-.catitle {
-    color: rgb(78, 149, 216);
-    font-family: 'Brush Script MT';
-    text-align: center;
-    padding-top: 130px;
-    font-size: 100px;
 }
 
 h3 {
@@ -238,7 +212,22 @@ div h3 p {
     color: white;
 }
 
+.button5    {
+    background-color: rgb(255, 123, 0);
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+    margin: 40px;
+    padding: 15px;
+    border-radius: 50px;
+    text-decoration: none;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+
 /* footer */
+
 
 .foot {
     margin-top: 50px;
@@ -273,7 +262,10 @@ footer div p {
     margin: 30px 30px 10px 45vw;
 }
 
+
+
 /* page actualite.html */
+
 
 .cat5 {
     margin-top: 100px;
@@ -281,6 +273,16 @@ footer div p {
 
 .cat5 > img {
     border-radius: 20px;
+}
+
+.titleActu  {
+    color: rgb(78, 149, 216);
+    font-family: 'Brush Script MT';
+}
+
+.titleActu h1 {
+    font-size: 50px;
+
 }
 
 .invit {
