--- a/style.css
+++ b/style.css
@@ -17,7 +17,10 @@ h4  {
 
 .margesvg   {
     margin-top: 40px;
-    margin-right: 10x;
+}
+
+.margesvg svg{
+    margin-right: 10px;
 }
 
 .nav-link:hover    {
@@ -184,7 +187,8 @@ header nav {
     font-family: 'Brush Script MT';
     text-align: center;
     padding-top: 130px;
-    font-size: 100px;
+    font-size: 80px;
+    
 }
 
 .cat {
@@ -244,18 +248,18 @@ div h3 p {
     width: 60vw;
     height: 30em;
     position: absolute;
-    left: 20vw;
+    left: 5vw;
     top: 100px;
     border: white 1px solid;
     border-radius: 50px;
 }
 
-footer div p {
+.contact p {
     text-align: center;
     margin: 20px;
     color: white;
     font-family: 'Brush Script MT';
-    font-size: 50px;
+    font-size: 40px;
 }
 
 .formulaire {
